[gd_scene load_steps=18 format=3 uid="uid://bed0hp8bt73in"]

[ext_resource type="PackedScene" uid="uid://bra4xapgi2r0v" path="res://enemies/enemy.tscn" id="1_rpyx0"]
[ext_resource type="Script" path="res://enemies/pink_enemy.gd" id="2_cuvpb"]
[ext_resource type="Texture2D" uid="uid://31xs62q5r1rm" path="res://assets/pink_enemy.png" id="2_uamsm"]
[ext_resource type="Script" path="res://components/timed_state_componoent.gd" id="4_uf4rt"]
[ext_resource type="PackedScene" uid="uid://cjuot87rnau7q" path="res://projectiles/pink_enemy_projectile.tscn" id="5_7oxsc"]
[ext_resource type="Script" path="res://components/move_component.gd" id="5_a0axx"]
[ext_resource type="Script" path="res://components/border_bounce_component.gd" id="6_m8iri"]
[ext_resource type="Script" path="res://components/scale_component.gd" id="6_rjpso"]
[ext_resource type="Script" path="res://components/spawner_component.gd" id="7_lwcsu"]

[sub_resource type="AtlasTexture" id="AtlasTexture_k7lim"]
atlas = ExtResource("2_uamsm")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bahp8"]
atlas = ExtResource("2_uamsm")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ilc3m"]
atlas = ExtResource("2_uamsm")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_x2pgb"]
atlas = ExtResource("2_uamsm")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fxk8r"]
atlas = ExtResource("2_uamsm")
region = Rect2(64, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_a84nd"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_k7lim")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bahp8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ilc3m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x2pgb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fxk8r")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_v3xvb"]
radius = 6.08276

[sub_resource type="CircleShape2D" id="CircleShape2D_ibdvg"]
radius = 5.0

[node name="PinkEnemy" instance=ExtResource("1_rpyx0")]
script = ExtResource("2_cuvpb")

[node name="AnimatedSprite2D" parent="." index="0"]
sprite_frames = SubResource("SpriteFrames_a84nd")
autoplay = "default"
frame_progress = 0.780429

[node name="StatsComponent" parent="." index="1"]
health = 6

[node name="VisibleOnScreenNotifier2D" parent="." index="4"]
scale = Vector2(0.7, 0.7)

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent" index="0"]
shape = SubResource("CircleShape2D_v3xvb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent" index="0"]
shape = SubResource("CircleShape2D_ibdvg")

[node name="ScoreComponent" parent="." index="11"]
adjust_amount = 20

[node name="ProjectileSpawnMarker" type="Marker2D" parent="." index="12"]

[node name="ScaleComponent" type="Node" parent="." index="13" node_paths=PackedStringArray("sprite")]
script = ExtResource("6_rjpso")
sprite = NodePath("..")

[node name="States" type="Node" parent="." index="14"]

[node name="MoveDownTimedState" type="Node" parent="States" index="0"]
unique_name_in_owner = true
script = ExtResource("4_uf4rt")
duration = 2.0

[node name="MoveDownComponent" type="Node" parent="States/MoveDownTimedState" index="0" node_paths=PackedStringArray("actor")]
script = ExtResource("5_a0axx")
actor = NodePath("../../..")
velocity = Vector2(0, 15)

[node name="MoveSideTimedState" type="Node" parent="States" index="1"]
unique_name_in_owner = true
script = ExtResource("4_uf4rt")
duration = 3.0

[node name="MoveSideComponent" type="Node" parent="States/MoveSideTimedState" index="0" node_paths=PackedStringArray("actor")]
unique_name_in_owner = true
script = ExtResource("5_a0axx")
actor = NodePath("../../..")

[node name="BorderBounceComponent" type="Node" parent="States/MoveSideTimedState" index="1" node_paths=PackedStringArray("actor", "move_component")]
script = ExtResource("6_m8iri")
actor = NodePath("../../..")
move_component = NodePath("../MoveSideComponent")

[node name="FireProjectileTimedState" type="Node" parent="States" index="2"]
unique_name_in_owner = true
script = ExtResource("4_uf4rt")

[node name="ProjectileSpawnerComponent" type="Node2D" parent="States/FireProjectileTimedState" index="0"]
unique_name_in_owner = true
script = ExtResource("7_lwcsu")
scene_to_spawn = ExtResource("5_7oxsc")
